RESOLVED FIXED 260187
AX: Crash in [WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUnit:].
https://bugs.webkit.org/show_bug.cgi?id=260187
Summary AX: Crash in [WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUn...
Andres Gonzalez
Reported 2023-08-14 18:51:50 PDT
33 bmalloc::api::IsoHeap<WebCore::EXTTextureFilterAnisotropic>::deallocate(void*) <== 33 WebCore::EXTTextureFilterAnisotropic::operator delete(void*) 33 WebCore::EXTTextureFilterAnisotropic::~EXTTextureFilterAnisotropic() 33 WebCore::appendTextContent(WebCore::Node const*, bool, bool&, WTF::StringBuilder&) 33 WebCore::Node::textContent(bool) const 33 WebCore::characterForCharacterOffset(WebCore::CharacterOffset const&) 33 WebCore::AXObjectCache::characterBefore(WebCore::CharacterOffset const&) 33 WebCore::AXObjectCache::previousBoundary(WebCore::CharacterOffset const&, unsigned int (*)(WTF::StringView, unsigned int, WebCore::BoundarySearchContextAvailability, bool&), WebCore::AXObjectCache::NeedsContextAtParagraphStart) 33 WebCore::AXObjectCache::startCharacterOffsetOfWord(WebCore::CharacterOffset const&, WebCore::EWordSide) 33 WebCore::AXObjectCache::leftWordRange(WebCore::CharacterOffset const&) 33 -[WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUnit:]::$_54::operator()() const 33 __AXTextMarkerRange const* WebCore::Accessibility::retrieveAutoreleasedValueFromMainThread<__AXTextMarkerRange const*, -[WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUnit:]::$_54>(-[WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUnit:]::$_54&&)::'lambda'()::operator()() const
Attachments
Patch (2.45 KB, patch)
2023-08-14 19:30 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2023-08-14 18:52:00 PDT
Andres Gonzalez
Comment 2 2023-08-14 18:55:07 PDT
Andres Gonzalez
Comment 3 2023-08-14 19:30:18 PDT
EWS
Comment 4 2023-08-15 07:20:23 PDT
Committed 266909@main (435522c0b090): <https://commits.webkit.org/266909@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467275 [details].
Note You need to log in before you can comment on or make changes to this bug.