Cherry-pick 435522c0b090. rdar://problem/113931267

AX: Crash in [WebAccessibilityObjectWrapper textMarkerRangeAtTextMarker:forUnit:].
    https://bugs.webkit.org/show_bug.cgi?id=260187
    rdar://110921099

    Reviewed by Tyler Wilcock.

    The crash was happening because the Node pointed to by the TextMarker is destroyed in a main loop cycle before it is used as the result of a request coming on the AX thread that is dispatched back to the main thread. This patch fixes the problem by checking whether the pointer is still in the AXObjectCache data structure that keeps track of the Nodes still alive and in use by TextMarkers.

    * Source/WebCore/accessibility/AXTextMarker.cpp:
    (WebCore::AXTextMarker::operator CharacterOffset const):

    Canonical link: https://commits.webkit.org/266909@main

Identifier: 265870.380@safari-7616-branch